Brána funční, nefunguje eet

--- a/index.phtml
+++ b/index.phtml
@@ -1,8 +1,4 @@
-<?php
 
-
-
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+
+
+<form action="https://gw.sandbox.gopay.com/gw/v3/d0cc035dbbac4baf5d7c02433aa75575" method="post">
+  <button name="pay" type="submit">Zaplatit</button>
+</form>
     
     </body>
 </html>
