--- a/index.phtml
+++ b/index.phtml
@@ -8,11 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-
-
-<form action="https://gw.sandbox.gopay.com/gw/v3/d0cc035dbbac4baf5d7c02433aa75575" method="post">
-  <button name="pay" type="submit">Zaplatit</button>
-</form>
+    <ul>
+      <li><a href="View/checkout.php">checkout</a></li>
+      <!-- <li><a href="View/checkout.php"></a></li> -->
+    </ul>
     
     </body>
 </html>
