--- a/index.phtml
+++ b/index.phtml
@@ -1,16 +1,11 @@
+<?php
+require "init.php"
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+?>
 <body>
     <ul>
       <li><a href="View/checkout.php">checkout</a></li>
-      <!-- <li><a href="View/checkout.php"></a></li> -->
+      <li><a href="View/login.phtml">sprava db</a></li>
     </ul>
     
     </body>
