--- a/View/login.phtml
+++ b/View/login.phtml
@@ -4,6 +4,14 @@ require("htmlTop.php");
     
     
 ?>
+<nav>
+      <ul>
+      <li><a href="checkout.php">checkout</a></li>
+        <li><a href="../index.phtml">Hlavní Stránka</a></li>
+      </ul>
+
+    </nav>
+    
 
 
 
