jeto vsecho i hope

--- a/View/zaplaceno.phtml
+++ b/View/zaplaceno.phtml
@@ -12,7 +12,7 @@ require("htmlTop.php");
     <p>dekujeme za objednavku</p>
 
     <p>
-        čslo objednávky:
+        číslo objednávky:
         <?=$_GET["cisloObjednavky"]?>
     </p>
     
