--- a/View/zaplaceno.phtml
+++ b/View/zaplaceno.phtml
@@ -1,25 +1,8 @@
-<?php
-require("htmlTop.php");
-?>
-    <nav>
-      <ul>
-      <li><a href="checkout.php">checkout</a></li>
-        <li><a href="../index.phtml">Hlavní Stránka</a></li>
-      </ul>
-
-    </nav>
 
     <p>dekujeme za objednavku</p>
 
     <p>
-        číslo objednávky:
-        <?=$_GET["cisloObjednavky"]?>
+        číslo objednávky: <?= $cisloObjednavky ?>
     </p>
     
-    <?php
 
-
-
-
-
-require("htmlBottom.html");
