--- a/View/sprava.phtml
+++ b/View/sprava.phtml
@@ -1,35 +1,55 @@
+<?php
+date_default_timezone_set('Europe/Prague');
+?>
+
 
 <h1>Výpis z databáze</h1>
 
     <table>
   <tr>
-    <th>Číslo objednávky</th>
-    <th>Název</th>
-    <th>Ulice</th>
-    <th>Město</th>
-    <th>PSČ</th>
+    <th>Číslo transakce</th>
+    <th>Oddělení</th>
     <th>Jméno</th>
     <th>Příjmení</th>
     <th>Email</th>
     <th>Telefon</th>
+    <th>Město</th>
+    <th>Ulice</th>
+    <th>Číslo popisné</th>
+    <th>PSČ</th>
     <th>Způsob platby</th>
     <th>Částka</th>
+    <th>Zaplaceno</th>
+    <th>Čas vytvoření</th>
+    <th>Čas zaplaceni</th>
   </tr>
-  <?php foreach ($dotaz as $radek){ ?>
+  <?php foreach ($transakce as $radek){ ?>
   <tr>
-    <td><?= $radek['cislo']; ?></td>
-    <td><?= $radek['cisloPopisne']; ?></td>
-    <td><?= $radek['ulice']; ?></td>
-    <td><?= $radek['mesto']; ?></td>
-    <td><?= $radek['PSC']; ?></td>
+    <td><?= $radek['id_transakce']; ?></td>
+    <td><?= $radek['oddeleni']; ?></td>
     <td><?= $radek['jmeno']; ?></td>
     <td><?= $radek['prijmeni']; ?></td>
     <td><?= $radek['email']; ?></td>
     <td><?= $radek['telefon']; ?></td>
-    <td><?= $radek['nazev']; ?></td>
+    <td><?= $radek['mesto']; ?></td>
+    <td><?= $radek['ulice']; ?></td>
+    <td><?= $radek['CP']; ?></td>
+    <td><?= $radek['PSC']; ?></td>
+    <td><?= $radek['zpusob_platby']; ?></td>
     <td><?= $radek['castka'] . "Kč"; ?></td>
+    <td><?php
+    if($radek['zaplaceno'] == true){
+      echo 'Ano';
+    } else {
+      echo 'Ne';
+    } 
+    ?></td>
+    <td><?=date("j.n.Y H:i:s", strtotime($radek['cas_vytvoreni'])); ?></td>
+    <td><?=date("j.n.Y H:i:s", strtotime($radek['cas_zaplaceni'])); ?></td>
+
     <td>
-    <a href="?odstranit=<?= $radek["cislo"] ?>">Odstranit</a>
+    <a href="sprava?odstranit=<?=$radek["id_transakce"] ?>">Odstranit</a>
+    <a href="sprava?upravit=<?= $radek["id_transakce"] ?>">Upravit</a>
     </td>
   </tr>
   <?php } ?>
