--- a/View/upravit.phtml
+++ b/View/upravit.phtml
@@ -1,19 +1,52 @@
 <!-- TODO values nahaze do tohodle formulare -->
-<form method="post" action="upravit">
+<form method="POST" action="upravit">
+
+    <label for="ID">ID: </label>
+    <input type="number" name="ID" id="ID" value="<?=$this->data["transakce"]["id_transakce"]?>" required readonly><br>
     
-        <label for="first_name">Jméno: </label><input type="text" name="first_name" id="first_name"><br>
-        <label for="last_name">Příjmení: </label><input type="text" name="last_name" id="last_name"><br>
-        <label for="email">Email: </label><input type="email" name="email" id="email"><br>
-        <label for="phone_number">Telefonní číslo: </label><input type="tel" name="phone_number" id="phone_number">
+    <label for="oddeleni">Oddělení: </label>
+    <input type="text" name="oddeleni" id="oddeleni" value="<?=$this->data["transakce"]["oddeleni"]?>" required><br>
     
-    
-        <label for="street">Ulice: </label><input type="text" name="street" id="street" value=""><br>
-        <label for="city">Město: </label><input type="text" name="city" id="city"><br>
-        <label for="postal_code">PSČ: </label><input type="number" name="postal_code" id="postal_code">
-    
-    
-        <label for="amount">Částka: </label><input type="number" name="amount" id="amount" required><br>
+    <label for="jmeno">Jméno: </label>
+    <input type="text" name="jmeno" id="jmeno" value="<?=$this->data["transakce"]["jmeno"]?>" required><br>
+    <label for="prijmeni">Příjmení: </label>
+    <input type="text" name="prijmeni" id="prijmeni" value="<?=$this->data["transakce"]["prijmeni"]?>" required><br>
+    <label for="email">Email: </label>
+    <input type="email" name="email" id="email" value="<?=$this->data["transakce"]["email"]?>" required><br>
+    <label for="telefon">Telefonní číslo: </label>
+    <input type="tel" name="telefon" id="telefon" value="<?=$this->data["transakce"]["telefon"]?>" required>
+
+
+    <label for="ulice">Ulice: </label>
+    <input type="text" name="ulice" id="ulice" value="<?=$this->data["transakce"]["ulice"]?>" required><br>
+    <label for="mesto">Město: </label>
+    <input type="text" name="mesto" id="mesto" value="<?=$this->data["transakce"]["mesto"]?>" required><br>
+    <label for="PSC">PSČ: </label>
+    <input type="number" name="PSC" id="PSC" value="<?=$this->data["transakce"]["PSC"]?>" required>
+    <label for="CP">Číslo popisné: </label>
+    <input type="number" name="CP" id="CP" value="<?=$this->data["transakce"]["CP"]?>" required>
     
 
-    <button type="submit">Pokracovat</button>
+
+    <label for="castka">Částka: </label>
+    <input type="number" name="castka" id="castka" value="<?=$this->data["transakce"]["castka"]?>" required><br>
+
+    <label for="zpusob_platby">Způsob platby: </label>
+    <input type="text" name="zpusob_platby" id="zpusob_platby"value="<?=$this->data["transakce"]["zpusob_platby"]?>"><br>
+    <label for="zaplaceno">Zaplaceno: </label>
+
+    <Select name="zaplaceno" id="zaplaceno" required >
+        <?=$this->data["transakce"]["zaplaceno"]?>
+    </Select>
+
+    <label for="Čas vytvoření">Čas Vytvoření: </label>
+    <input type="datetime" name="zpusob_platby" id="zpusob_platby" value="<?=$this->data["transakce"]["cas_vytvoreni"]?>" required readonly><br>
+
+
+    <label for="Čas vytvoření">Čas Zaplacení: </label>
+    <input type="datetime" name="zpusob_platby" id="zpusob_platby" value="<?=$this->data["transakce"]["cas_vytvoreni"]?>" readonly><br>
+
+    
+    <button href="sprava">Zpět</button>
+    <button type="submit">Změnit</button>
 </form>
