pridana uprava dat ve zprave, bez validace dat do formulare vlozenych

--- a/View/login.phtml
+++ b/View/login.phtml
@@ -1,5 +1,5 @@
 
-<h2>vítej ve spravě databáze</h2>
+<h2>Přihlášení do systému</h2>
 <form  method="post">
     <input type="text" name="jmeno" id="jmeno" required>
     <label for="jmeno">zadej jmeno</label>
