--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -9,11 +9,15 @@
 </head>
 <body>
     </div>
+    
     <nav>
         <ul>
             <li><a href="uvod">Úvod</a></li>
-            <li><a href="login">Správa</a></li>
             <li><a href="zaplatit">Zaplatit</a></li>
+            <?php 
+            if(($_SESSION["prihlasen"] == true)){
+                ?>  <li><a href="sprava">Správa</a></li> 
+            <?php } ?>
         </ul>
     </nav>
 
@@ -25,6 +29,18 @@
                 <?= $message["message"] ?>
             </p>
         <?php } ?>
+    </div>
+
+    <div>
+        <?php 
+        if(($_SESSION["prihlasen"] == false)){
+            ?>  <li><a href="login">přihlásit</a></li> <?php
+        }
+        else {
+            ?>  <li><a href="odhlasit">odhlásit</a></li> <?php
+        }
+
+        ?>
     </div>
 
 <?php
