--- a/View/sprava.phtml
+++ b/View/sprava.phtml
@@ -45,7 +45,7 @@ date_default_timezone_set('Europe/Prague');
     } 
     ?></td>
     <td><?=date("j.n.Y H:i:s", strtotime($radek['cas_vytvoreni'])); ?></td>
-    <td><?=date("j.n.Y H:i:s", strtotime($radek['cas_zaplaceni'])); ?></td>
+    <td><?php if($radek["cas_zaplaceni"] != NULL) echo(date("j.n.Y H:i:s", strtotime($radek['cas_zaplaceni']))); ?></td>
 
     <td>
     <a href="<?=$this->view?>?odstranit=<?=$radek["id_transakce"] ?>">Odstranit</a>
