--- a/View/upravit.phtml
+++ b/View/upravit.phtml
@@ -14,7 +14,7 @@
     <label for="email">Email: </label>
     <input type="email" name="email" id="email" value="<?=$this->data["transakce"]["email"]?>" required><br>
     <label for="telefon">Telefonní číslo: </label>
-    <input type="tel" name="telefon" id="telefon" value="<?=$this->data["transakce"]["telefon"]?>" required>
+    <span>+</span><input type="tel" name="telefon" id="telefon" value="<?=$this->data["transakce"]["telefon"]?>" required>
 
 
     <label for="ulice">Ulice: </label>
