--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -6,47 +6,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrace platební brány GoPay</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="View/style.css">
+
+
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+
+        window.addEventListener('load', function () {
+            let url = window.location.href;
+        url = url.split("/");
+        console.log(url);
+
+        const element = document.getElementById(url.pop());
+        if (element != null){
+            element.setAttribute("class"," nav-item nav-link active")
+            console.log(element);
+        }
+        })
+        
+    </script>
+
+
+<div class="container-fluid ">
+        <div class="row">
+                <nav class="navbar navbar-expand navbar-light navbar- bg-light text-uppercase fw-bold">
+                    <div class="nav navbar-nav text-nav">
+                        <a id="uvod" class="nav-item nav-link" href="uvod" >Úvod</a>
+                        <a id="zaplatit" class="nav-item nav-link" href="zaplatit">Zaplatit</a>
+                        <?php 
+                        if(($_SESSION["prihlasen"] == true)){
+                            ?>  <a  id="sprava" class="nav-item nav-link" href="sprava">Správa</a> 
+                        <?php } ?>
+                    </div>
+                    <div class="nav navbar-nav ms-auto text-nav">
+            
+                    
+                    <?php 
+                    if(($_SESSION["prihlasen"] == false)){
+                        ?>  <a class="nav-item nav-link " href="login">Přihlásit</a> <?php
+                    }
+                    else {
+                        ?>  <a class="nav-item nav-link navbar-end" href="odhlasit">Odhlásit</a> <?php
+                    }
+            
+                    ?>
+                    </div>
+                </nav>
+        </div>
+
+        <div class="row pt-5 pb-5 text-center text-white bg-primary">
+            <div class="col-12" >
+
+                <h1 class="text-large" >Integrace Platební Brány GoPay</h1>
+            </div>
+            <div class="col-12">
+
+                <h2>Aleš Recman,Vojtěch Mrkva</h2>
+            </div>
+        </div>
+        
     </div>
     
-    <nav>
-        <ul>
-            <li><a href="uvod">Úvod</a></li>
-            <li><a href="zaplatit">Zaplatit</a></li>
+    <div class="container-md bg-light p-2">
+    
+        <div 
             <?php 
-            if(($_SESSION["prihlasen"] == true)){
-                ?>  <li><a href="sprava">Správa</a></li> 
+            if(isset($messsages))
+            foreach ($messsages as $message) { ?>
+                <p class="<?= $message["type"] ?>">
+                    <?= $message["message"] ?>
+                </p>
             <?php } ?>
-        </ul>
-    </nav>
+        </div>
+    
 
-    <div >
-        <?php 
-        if(isset($messsages))
-        foreach ($messsages as $message) { ?>
-            <p class="<?= $message["type"] ?>">
-                <?= $message["message"] ?>
-            </p>
-        <?php } ?>
-    </div>
-
-    <div>
-        <?php 
-        if(($_SESSION["prihlasen"] == false)){
-            ?>  <li><a href="login">přihlásit</a></li> <?php
-        }
-        else {
-            ?>  <li><a href="odhlasit">odhlásit</a></li> <?php
-        }
-
-        ?>
-    </div>
-
+    
 <?php
         $this->controller->printView();
+
         
    ?>
-   
+   </div>
 </body>
 </html>
