--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrace platební brány GoPay</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="View/style.css">
 
 
@@ -57,7 +58,7 @@
                 </nav>
         </div>
 
-        <div class="row pt-5 pb-5 text-center text-white bg-primary">
+        <!-- <div class="row pt-5 pb-5 text-center text-white bg-primary">
             <div class="col-12" >
 
                 <h1 class="text-large" >Integrace Platební Brány GoPay</h1>
@@ -66,11 +67,12 @@
 
                 <h2>Aleš Recman,Vojtěch Mrkva</h2>
             </div>
-        </div>
+        </div> -->
         
     </div>
     
-    <div class="container-md bg-light p-2">
+    <!-- <div class="container-md bg-light p-2"> -->
+    <div class="container-fluid">
     
         <div 
             <?php 
