--- a/View/zaplaceno.phtml
+++ b/View/zaplaceno.phtml
@@ -1,8 +1,15 @@
 
-    <p>dekujeme za objednavku</p>
+<div class="row pt-5 pb-5 text-center text-white bg-primary">
+        <div class="col-12" >
+            <h1 class="text-large" >Platba byla uspěšná</h1>
+        </div>
+</div>
+<div class="container-md bg-light p-2">
+    <div class=" row text-center">
+        <h2>Děkujeme za zaplacení</h2>
+    </div>
 
-    <p>
-        číslo objednávky: <?= $cisloObjednavky ?>
-    </p>
+
+</div>
     
 
