--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -8,7 +8,7 @@
     <title>Integrace platební brány GoPay</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="View/style.css">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -24,7 +24,7 @@
         const element = document.getElementById(url.pop());
         if (element != null){
             element.setAttribute("class"," nav-item nav-link active")
-            console.log(element);
+            // console.log(element);
         }
         })
         
@@ -36,7 +36,7 @@
                 <nav class="navbar navbar-expand navbar-light navbar- bg-light text-uppercase fw-bold">
                     <div class="nav navbar-nav text-nav">
                         <a id="uvod" class="nav-item nav-link" href="uvod" >Úvod</a>
-                        <a id="zaplatit" class="nav-item nav-link" href="zaplatit">Zaplatit</a>
+                        <a id="zaplatit" class="nav-item nav-link" href="formular">Zaplatit</a>
                         <?php 
                         if(($_SESSION["prihlasen"] == true)){
                             ?>  <a  id="sprava" class="nav-item nav-link" href="sprava">Správa</a> 
