--- a/View/login.phtml
+++ b/View/login.phtml
@@ -20,12 +20,12 @@
             <div class="border "></div>
             <form  method="post" >
                 <div class=" row mt-3">
-                    <label for="jmeno">Zadej jmeno</label>
+                    <label for="jmeno" class="form-label">Zadej jméno: </label>
                     <input type="text" name="jmeno" id="jmeno" required class="form-control" placeholder="Jmeno">
                 </div>
         
                 <div class=" row mt-3">
-                    <label for="heslo">Zadej heslo</label>
+                    <label for="heslo" class="form-label">Zadej heslo: </label>
                     <input type="password" name="heslo" id="heslo" required class="form-control" placeholder="Heslo">
                 </div>
                 <?php
@@ -38,7 +38,7 @@
                         <?php
                     }
                     ?>
-                <div class="row mt-3" text-center >
+                <div class="row mt-4 mb-2" text-center >
                     <input type="submit" value="Prihlasit se" class="btn btn-primary ">
                 </div>
             </form>
